--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "dev": "NODE_OPTIONS='--import ./instrument.mjs' nodemon src/server.js",
+    "start": "NODE_OPTIONS='--import ./instrument.mjs' node src/server.js"
   },
   "keywords": [],
   "author": "",
