--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,19 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.47.0",
+    "@sentry/react": "^10.1.0",
+    "@stream-io/video-react-sdk": "^1.19.2",
+    "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.11.0",
+    "lucide-react": "^0.539.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.5.2",
+    "react-router": "^7.6.3",
+    "stream-chat": "^9.14.0",
+    "stream-chat-react": "^13.3.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
